assets/css/dark.css
/* ... */
.searchbar .pure-form fieldset {
  padding: 0;
}
.searchbar .pure-form input[type="search"]:focus {
  margin-bottom: 0;
  border-bottom: 2px solid #aaa;
}
.user-field {
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  align-items: center;
}
.user-field div {
  width: initial;
}
.user-field div:not(:last-child) {
  margin-right: 1em;
}
@media only screen and (max-aspect-ratio: 16/9) {
  .player-dimensions.vjs-fluid {
    padding-top: 46.86% !important;
  }
  #player-container {
    padding-bottom: 46.86% !important;
  }
}
@media screen and (max-width: 767px) {
  .navbar {
    flex-direction: column;
  }
  .navbar > div {
    display: flex;
    justify-content: center;
  }
  .navbar > div:not(:last-child) {
    margin-bottom: 1em;
  }
  .navbar > .searchbar > form {
    width: 60%;
  }
  h1 {
    font-size: 1.25em;
    margin: 0.42em 0;
  }
}
@media screen and (max-width: 320px) {
  .navbar > .searchbar > form {
    width: 100%;
    margin: 0 1em;
  }
}
.video-card-row {
  margin: 15px 0;
  border-top: 1px solid rgba(255,255,255,.1);
}
.video-card-row .video-data + .video-data {
  font-weight: 600;
}
.flexible {
  display: flex;
}
.flex-left {
  flex: 1 1 100%;
  flex-wrap: wrap;
}
.flex-right {
  flex: 1 0 max-content;
  flex-wrap: nowrap;
}
p.channel-name {
  margin: 0;
}
p.video-data {
  margin: 0;
  font-weight: 700;
  font-size: 80%;
}
footer {
  color: #919191;
  margin-top: auto;
  padding: 1.5em 0;
  text-align: center;
  max-height: 30vh;
}
footer a {
  color: #919191 !important;
  text-decoration: underline;
}
footer span {
  margin: 4px 0;
  display: block;
}
@keyframes spin {
  0% {
    transform: rotate(0);
  }
  100% {
    transform: rotate(360deg);
  }
}
fieldset > select,
span > select {
  color: #313133;
}
.pure-control-group label {
  word-wrap: normal;
}
a:hover,
a:active,
summary:hover {
  color: #ca7740;
}
a {
  color: #c19f9f;
  text-decoration: none;
  font-weight: 600;
}
body {
  background-color: #272323;
  color: #f0f0f0;
}
.pure-form legend {
  color: #f0f0f0;
}
.pure-menu-heading {
  color: #f0f0f0;
}
input,
select,
textarea {
  color: #272323;
}
.pure-form input[type="file"] {
  color: #f0f0f0;
}
.searchbar input {
  background-color: inherit;
  color: inherit;
}
.no-theme a:hover,
.no-theme a:active {
  color: #00b6f0;
}
.no-theme a {
  color: #a0a0a0;
  text-decoration: none;
}
body.no-theme {
  background-color: #272323;
  color: #f0f0f0;
}
.no-theme .pure-form legend {
  color: #f0f0f0;
}
.no-theme .pure-menu-heading {
  color: #f0f0f0;
}
.no-theme input,
.no-theme select,
.no-theme textarea {
  color: #272323;
}
.no-theme .pure-form input[type="file"] {
  color: #f0f0f0;
}
.no-theme .searchbar input {
  background-color: inherit;
  color: inherit;
}
#filters {
  display: inline;
  margin-top: 15px;
}
#filters > div {
  display: inline-block;
}
#filters > summary {
  display: block;
  margin-bottom: 15px;
}
#filters > summary::before {
  content: "[ + ]";
  font-size: 1.5em;
}
#filters[open] > summary::before {
  content: "[ - ]";
  font-size: 1.5em;
}
hr {
  margin: 10px 0;
  border: none;
  height: 1px;
  background: linear-gradient(to right, rgba(0,0,0,0), rgba(255,255,255,.1), rgba(0,0,0,0));
}
#descexpansionbutton {
  display: none;
}
#descexpansionbutton ~ div {
  overflow: hidden;
  height: 8.3em;
}
#descexpansionbutton:checked ~ div {
  overflow: unset;
  height: 100%;
}
#descexpansionbutton ~ label {
  order: 1;
  margin-top: 20px;
}
h1,
h2,
h3,
h4,
h5,
p,
#descriptionWrapper,
#description-box {
  unicode-bidi: plaintext;
  text-align: start;
}
#descriptionWrapper, .channel-profile span {
  position: relative;
  z-index: -2;
  background: #353333;
  border: 1px solid rgba(255,255,255,.1);
  border-radius: 3px;
  box-shadow: inset 0 0 0 1px rgba(0,0,0,.4);
}
.channel-profile span {
  margin-left: -52px;
  padding: 4px 20px 4px 50px;
  z-index: -1;
  border-radius: 0 20px 20px 0;
}
#descriptionWrapper {
  margin-top: -12px;
  padding: 24px 26px 4px;
}
#description-box #descriptionWrapper {
  margin-top: 0;
  padding: 12px 20px 14px;
}
#logo > h1 {
  text-align: center;
}
.h-box h3 {
  margin-bottom: 0;
  padding: 2px 10px 6px;
  text-align: center;
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 999;
  border-top: 1px solid rgba(255,255,255,.1);
  background: #1b1b1b;
}
.h-box h3 small {
  display: inline-block;
  line-height: 1.3;
  font-weight: 600 !important;
  font-size: 65%;
}
footer {
  display: none;
}
#logo h1.pure-menu-heading {
  margin: -5% 0 5%;
  width: 100%;
  font-size: 0 !important;
}
#logo h1.pure-menu-heading::after {
  width: 100%;
  height: 120px;
  display: inline-block;
  content: "";
  background: url(../logo.svg) no-repeat center center / 36%;
}
@media screen and (max-width: 1000px) {
  #logo h1.pure-menu-heading::after {
    margin: -30px 0;
    background-size: auto 52%;
  }
}
a,
u {
  text-decoration: none !important;
}
input[type="search"] {
  text-align: center;
}
input[type="search"]:focus::placeholder {
  color: transparent;
}
.feed-menu::after {
  margin: 20px 0;
  width: 100%;
  height: 1px;
  display: inline-block;
  background: linear-gradient(to right,rgba(0, 0, 0, 0),rgba(255,255,255,.1),rgba(0, 0, 0, 0));
  content: "";
}
.pure-menu-heading {
  font-weight: 700;
  letter-spacing: 0.05em;
}
.pure-g {
  margin-bottom: 20px;
}
.pure-g.h-box {
  margin: -7px 0 -14px;
}
.pure-g.navbar.h-box {
  margin: 0;
}
.pure-u-1.pure-md-1-3 {
  margin: 0 auto;
  width: auto;
  display: inline-block;
  text-align: center;
}
.imagethumb {
  position: relative;
  font-size: 90%;
}
.imagethumb p:not(.length)[dir="auto"] {
  margin: 5px 0 -10px;
  line-height: 1.25;
  font-size: 85%;
  font-weight: 600;
}
.imagethumb .icon-buttons {
  padding: 3px 4px;
  display: inline-block;
  position: absolute;
  top: 4px;
  left: 18px;
  background: rgba(35, 35, 35, 0.75);
}
.imagethumb .icon-buttons .icon {
  margin: -1px 1px 0;
  padding: 0 2px;
  display: inline-block;
  font-size: 120%;
}
/* ... */

